# cafe_ordering_system_CLI

./: README.md  pyproject.toml
cafe_project/: README.md  blah_usecase.py  client_calls.py  courier.py  customer.py  entity_manager.py  main.py  order.py  product.py
cafe_project/data/: couriers.json  customers.json  products.json  products2.json
cafe_project/tests/: test_courier_manager.py  test_customer_manager.py  test_order_manager.py  test_product_manager.py
