[tool.poetry]
name = "cafe_project"
version = "0.1.0"
description = ""
authors = ["Daria Vesela <daria1vesela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mypy = "^1.13.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
